// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebtTimeline — snapshots > renders all-paid scenario 1`] = `
<div>
  <section
    aria-label="Historial de movimientos"
  >
    <ol
      class="space-y-0"
    >
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de marzo de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Pagado
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de abril de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Pagado
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de mayo de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Pagado
          </span>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`DebtTimeline — snapshots > renders future-installments scenario 1`] = `
<div>
  <section
    aria-label="Historial de movimientos"
  >
    <ol
      class="space-y-0"
    >
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de junio de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de julio de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de agosto de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de septiembre de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de octubre de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`DebtTimeline — snapshots > renders overdue scenario 1`] = `
<div>
  <section
    aria-label="Historial de movimientos"
  >
    <ol
      class="space-y-0"
    >
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-red-100 text-red-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de enero de 2024
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-red-600"
          >
            Vencida
          </span>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`DebtTimeline — snapshots > renders partially-paid scenario (pending installment with reduced remaining) 1`] = `
<div>
  <section
    aria-label="Historial de movimientos"
  >
    <ol
      class="space-y-0"
    >
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de marzo de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Pagado
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Pago recibido
          </p>
          <p
            class="text-xs text-gray-500"
          >
            10 de marzo de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Aprobado
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-green-100 text-green-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="mt-1 w-px flex-1 bg-gray-200"
          />
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Aplicación de pago
          </p>
          <p
            class="text-xs text-gray-500"
          >
            10 de marzo de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-green-600"
          >
            Aplicado
          </span>
        </div>
      </li>
      <li
        class="flex gap-4 py-3"
      >
        <div
          class="flex flex-col items-center"
        >
          <span
            class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-100 text-amber-600"
          >
            <svg
              aria-hidden="true"
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25H4.75z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="flex-1 pb-4"
        >
          <p
            class="text-sm font-medium text-gray-900"
          >
            Cuota
          </p>
          <p
            class="text-xs text-gray-500"
          >
            1 de abril de 2025
          </p>
          <p
            class="mt-1 font-semibold text-gray-900"
          >
            ₡1 000,00
          </p>
          <span
            class="mt-1 inline-block text-xs font-medium text-amber-600"
          >
            Pendiente
          </span>
        </div>
      </li>
    </ol>
  </section>
</div>
`;
